--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <h2>Creat your Google Account</h2>
         <form action="">
             <p>
-                <input type="text" placeholder="First name" id="fn">
-                <input type="text" placeholder="Last name" id="ln">
+                <input type="text" placeholder id="fn" class="write">
+                <label class="hello he">First name</label>
+                <input type="text" placeholder id="ln" class="write">
+                <label class="hello she">Last name</label>
             </p>
             <p>
-                <input type="email" placeholder="Username" data-placeholder="@gmail.com" id="un"><br>
+                <input type="email" placeholder data-placeholder="@gmail.com" id="un" class="write"><br>
+                <label class="hello bye">Username</label>
             <div id="let"> You can use letter, number & periodes</div>
             </p>
             <p>
@@ -27,8 +30,10 @@
             </p>
             <br>
             <p>
-                <input type="password" placeholder="Password" id="p" value="">
-                <input type="password" placeholder="Confirm Password" id="cp"><br>
+                <input type="password" placeholder id="p" value="" class="write">
+                <label class="hello ps">Password</label>
+                <input type="password" placeholder id="cp" class="write">
+                <label class="hello js">Confirm Password</label><br>
             <div id="pass">
                 Use 8 or more characters with a mix of letters, numbers & symbols</div><br>
             <input type="checkbox" onclick="myFunction()">Show Password
