--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="body">
         <h3><img src="./Screenshot 2021-03-22 at 8.19.25 AM.png" alt="" height="50px"></h3>
-        <h2>Creat your Google Account</h2>
+        <h2>Create your Google Account</h2>
         <form action="">
             <p>
                 <input type="text" placeholder id="fn" class="write">
