--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div id="body">
         <h3><img src="./Screenshot 2021-03-22 at 8.19.25 AM.png" alt="" height="50px"></h3>
-        <h2>Create your Google Account</h2>
+        <h2>Creat your Google Account</h2>
         <form action="">
-            <p>
+            <p><span class="he">
                 <input type="text" placeholder id="fn" class="write">
-                <label class="hello he">First name</label>
+                <label class="hello he">First name</label></span>
                 <input type="text" placeholder id="ln" class="write">
                 <label class="hello she">Last name</label>
             </p>
@@ -29,9 +29,9 @@
                 <a href="#" id="id">Use my current email address insteed</a>
             </p>
             <br>
-            <p>
+            <p><span class="ps">
                 <input type="password" placeholder id="p" value="" class="write">
-                <label class="hello ps">Password</label>
+                <label class="hello ps">Password</label></span>
                 <input type="password" placeholder id="cp" class="write">
                 <label class="hello js">Confirm Password</label><br>
             <div id="pass">
