--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="body">
         <h3><img src="./Screenshot 2021-03-22 at 8.19.25 AM.png" alt="" height="50px"></h3>
-        <h2 class="ddd">Creat your Google Account</h2>
+        <h2 class="ddd">Create your Google Account</h2>
         <form action="">
             <p><span class="he">
                 <input type="text" placeholder id="fn" class="write">
